--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@reduxjs/toolkit": "^1.0.4",
     "apollo-boost": "^0.4.4",
+    "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^7.4.0",
@@ -20,8 +21,8 @@
     "redux": "^4.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "concurrently \"react-scripts start\" \"node server.js\"",
+    "build": "concurrently \"react-scripts build\" \"node server.js\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js"
