--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "redux": "^4.0.4"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node server.js\"",
+    "start": "react-scripts start",
     "build": "concurrently \"react-scripts build\" \"node server.js\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
