--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^7.4.0",
+    "formik": "^2.0.8",
     "graphql": "^14.5.8",
     "node-fetch": "^2.6.0",
     "react": "^16.11.0",
@@ -19,7 +20,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "recompose": "^0.30.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
