--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@reduxjs/toolkit": "^1.0.4",
+    "@welldone-software/why-did-you-render": "^3.5.0",
     "apollo-boost": "^0.4.4",
     "concurrently": "^5.0.0",
     "cors": "^2.8.5",
